[エラーの文字の色を黒→赤]

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -26,7 +26,9 @@
       この内容でお見積りする場合は、「概算お見積もりをする」ボタンを押してください。
     </div>
     <ul th:if="${#fields.hasErrors('all')}">
+      <div class="warning">
       <li th:each="err : ${#fields.errors('all')}" th:text="${err}"></li>
+      </div>
     </ul>
     <div class="col-sm-12">
       <div class="sub-title">お客様情報</div>
