--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -61,6 +61,23 @@
           <input type="text" id="newAddress" name="newAddress" th:field="*{newAddress}" class="form-control"
                  value="札幌市南区1"/>
         </div>
+        <div class="month">
+          <label for="month">引っ越し月</label>
+          <select id="month" name="month" class="month">
+            <option> 1月</option> 
+            <option> 2月</option>
+            <option> 3月</option>
+            <option> 4月</option>
+            <option> 5月</option>
+            <option> 6月</option>
+            <option> 7月</option> 
+            <option> 8月</option>
+            <option> 9月</option>
+            <option> 10月</option>
+            <option> 11月</option>
+            <option> 12月</option>
+          </select>
+        </div>
       </fieldset>
       <fieldset>
       <div class="sub-title">お荷物情報</div>
