--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -121,6 +121,11 @@
             <input type="hidden" name="tv" id="tv" th:value="*{tv}"/>
           </tr>
           <tr>
+            <th>ソファーの個数</th>
+            <td><span th:text="*{sofa}"></span></td>
+            <input type="hidden" name="sofa" id="sofa" th:value="*{sofa}"/>
+          </tr>
+          <tr>
             <th>洗濯機の設置工事申し込み</th>
             <td><span th:text="*{washingMachineInstallation} ? 'あり' : 'なし'"></span></td>
             <input type="hidden" name="washingMachineInstallation" id="washingMachineInstallation" th:value="*{washingMachineInstallation}"/>
