--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -99,12 +99,12 @@
                  value="1"/>
         </div>
         <div class="form-group">
-          <label for="bed">テレビの個数</label>
+          <label for="tv">テレビの個数</label>
           <input type="text" id="tv" name="tv" th:field="*{tv}" class="form-control" value="3"/>
         </div>
         <div class="form-group">
-          <label for="bed">ソファーの個数</label>
-          <input type="text" id="bed" name="bed" th:field="*{bed}" class="form-control" value="3"/>
+          <label for="sofa">ソファーの個数</label>
+          <input type="text" id="sofa" name="sofa" th:field="*{sofa}" class="form-control" value="3"/>
         </div>
         <div class="form-group">
           <label for="bed">タンスの個数</label>
