--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -112,11 +112,11 @@
         </div>
         <div class="form-group">
           <label for="bed">テーブルの個数</label>
-          <input type="text" id="bed" name="bed" th:field="*{bed}" class="form-control" value="3"/>
+          <input type="text" id="table" name="table" th:field="*{table}" class="form-control" value="3"/>
         </div>
         <div class="form-group">
-          <label for="bed">いすの個数</label>
-          <input type="text" id="bed" name="bed" th:field="*{bed}" class="form-control" value="3"/>
+          <label for="bed">イスの個数</label>
+          <input type="text" id="chair" name="chair" th:field="*{chair}" class="form-control" value="3"/>
         </div>
         <div class="form-group">
           <label for="washingMachineInstallation">洗濯機の設置工事申し込み</label>
