--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -111,7 +111,16 @@
           <td><span th:text="*{sofa}"></span></td>
           <input type="hidden" name="sofa" id="sofa" th:value="*{sofa}"/>
         </tr>
-        
+        <tr>
+          <th>テーブルの個数</th>
+          <td><span th:text="*{table}"></span></td>
+          <input type="hidden" name="table" id="table" th:value="*{table}"/>
+        </tr>
+        <tr>
+          <th>イスの個数</th>
+          <td><span th:text="*{chair}"></span></td>
+          <input type="hidden" name="chair" id="chair" th:value="*{chair}"/>
+        </tr>
         <tr>
           
           <th>洗濯機の設置工事申し込み</th>
