--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -107,8 +107,8 @@
           <input type="text" id="sofa" name="sofa" th:field="*{sofa}" class="form-control" value="3"/>
         </div>
         <div class="form-group">
-          <label for="bed">タンスの個数</label>
-          <input type="text" id="bed" name="bed" th:field="*{bed}" class="form-control" value="3"/>
+          <label for="tansu">タンスの個数</label>
+          <input type="text" id="tansu" name="tansu" th:field="*{tansu}" class="form-control" value="3"/>
         </div>
         <div class="form-group">
           <label for="bed">テーブルの個数</label>
