--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -122,6 +122,11 @@
           <input type="hidden" name="chair" id="chair" th:value="*{chair}"/>
         </tr>
         <tr>
+          <th>タンスの個数</th>
+          <td><span th:text="*{tansu}"></span></td>
+          <input type="hidden" name="tansu" id="tansu" th:value="*{tansu}"/>
+        </tr>
+        <tr>
           
           <th>洗濯機の設置工事申し込み</th>
           <td><span th:text="*{washingMachineInstallation} ? 'あり' : 'なし'"></span></td>
