[引越し表記の変更]

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -96,7 +96,7 @@
           <col span="2" style="background-color: #FFFFFF;">
           <tbody>
           <tr>
-            <th style="width: 40%">段ボールの個数(例)1人暮らし：10個</th>
+            <th style="width: 40%">段ボールの個数</th>
             <td><span th:text="*{box}"></span></td>
             <input type="hidden" name="box" id="box" th:value="*{box}"/>
           </tr>
@@ -121,7 +121,6 @@
             <input type="hidden" name="tv" id="tv" th:value="*{tv}"/>
           </tr>
           <tr>
-<<<<<<< Updated upstream
             <th>ソファーの個数</th>
             <td><span th:text="*{sofa}"></span></td>
             <input type="hidden" name="sofa" id="sofa" th:value="*{sofa}"/>
@@ -137,8 +136,6 @@
             <input type="hidden" name="chair" id="chair" th:value="*{chair}"/>
           </tr>
           <tr>
-=======
->>>>>>> Stashed changes
             <th>タンスの個数</th>
             <td><span th:text="*{tansu}"></span></td>
             <input type="hidden" name="tansu" id="tansu" th:value="*{tansu}"/>
