--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -62,7 +62,7 @@
                  value="札幌市南区1"/>
         </div>
         <div class="month">
-          <label for="month">引っ越し月</label>
+          <label for="month">引越し月</label>
           <select id="month" name="month" class="month">
             <option> 1月</option> 
             <option> 2月</option>
